--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-accelerate==0.25.0
+accelerate==1.1.1
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
+aiohttp-cors==0.8.1
 aiosignal==1.3.2
 airportsdata==20250224
 alembic==1.15.2
@@ -11,6 +12,7 @@ apache-libcloud==3.8.0
 appdirs==1.4.4
 argcomplete==3.6.2
 arrow==1.3.0
+astor==0.8.1
 attrs==25.3.0
 azure-core==1.33.0
 azure-identity==1.21.0
@@ -19,6 +21,7 @@ azure-storage-file-datalake==12.20.0
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
+blake3==1.0.4
 blinker==1.9.0
 boto3==1.38.1
 botocore==1.38.1
@@ -33,20 +36,32 @@ click==8.1.8
 cloudpickle==3.1.1
 cmake==4.0.0
 coloredlogs==15.0.1
+colorful==0.5.6
+compressed-tensors==0.9.0
 contourpy==1.3.2
 coolname==2.2.0
 cramjam==2.10.0
 cryptography==44.0.2
+cupy-cuda12x==13.4.1
 cycler==0.12.1
-datasets==2.19.2
+databricks-sdk==0.38.0
+datasets==3.2.0
+Deprecated==1.2.18
+depyf==0.18.0
 dill==0.3.8
 diskcache==5.6.3
+distlib==0.3.9
 distro==1.9.0
+dnspython==2.7.0
 docker==7.1.0
 docker-pycreds==0.4.0
-einops==0.7.0
+docstring_parser==0.16
+einops==0.8.0
+email_validator==2.2.0
 entrypoints==0.4
 fastapi==0.115.12
+fastapi-cli==0.0.7
+fastrlock==0.8.3
 filelock==3.18.0
 Flask==3.1.0
 flatbuffers==25.2.10
@@ -54,8 +69,9 @@ fonttools==4.57.0
 frozenlist==1.6.0
 fsspec==2023.6.0
 genson==1.3.0
+gguf==0.10.0
 gitdb==4.0.12
-GitPython==3.1.44
+GitPython==3.1.43
 google-api-core==2.25.0rc0
 google-auth==2.39.0
 google-cloud-core==2.4.3
@@ -68,12 +84,13 @@ graphene==3.4.3
 graphql-core==3.2.4
 graphql-relay==3.2.0
 greenlet==3.2.1
+grpcio==1.71.0
 gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.8
 httptools==0.6.4
 httpx==0.28.1
-huggingface-hub==0.22.2
+huggingface-hub==0.26.5
 humanfriendly==10.0
 idna==3.10
 importlib-metadata==6.11.0
@@ -90,52 +107,66 @@ jsonschema-specifications==2025.4.1
 kiwisolver==1.4.8
 lark==1.2.2
 lightning-utilities==0.14.3
-llm-foundry==0.8.0
-lm-format-enforcer==0.10.1
+llm-foundry==0.17.0
+llvmlite==0.43.0
+lm-format-enforcer==0.10.11
 Mako==1.3.10
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 mdurl==0.1.2
-mlflow==2.12.2
-mosaicml==0.22.0
+mistral_common==1.5.4
+mlflow==2.14.3
+mosaicml==0.28.0
 mosaicml-cli==0.6.42
-mosaicml-streaming==0.7.6
+mosaicml-streaming==0.11.0
 mpmath==1.3.0
 msal==1.32.0
 msal-extensions==1.3.1
 msgpack==1.1.0
+msgspec==0.19.0
 multidict==6.4.3
 multiprocess==0.70.16
 nest-asyncio==1.6.0
 networkx==3.4.2
 ninja==1.11.1.4
+numba==0.60.0
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
 nvidia-ml-py==12.570.86
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvtx-cu12==12.1.105
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 oci==2.150.2
 omegaconf==2.3.0
-onnx==1.14.0
-onnxruntime==1.15.1
+onnx==1.17.0
+onnxruntime==1.19.2
 openai==1.76.0
-outlines==0.2.3
+opencensus==0.11.4
+opencensus-context==0.1.3
+opencv-python-headless==4.11.0.86
+opentelemetry-api==1.32.1
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
+outlines==0.1.11
 outlines_core==0.1.26
 packaging==24.0
 pandas==2.2.3
 paramiko==3.5.1
-pillow==11.2.1
+partial-json-parser==0.2.1.1.post5
+peft==0.15.2
+pillow==10.4.0
+platformdirs==4.3.7
 prometheus-fastapi-instrumentator==7.1.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.51
@@ -144,24 +175,30 @@ proto-plus==1.26.1
 protobuf==4.25.7
 psutil==5.9.8
 py-cpuinfo==9.0.0
+py-spy==0.4.0
 pyarrow==15.0.2
 pyarrow-hotfix==0.6
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pycountry==24.6.1
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
 Pygments==2.19.1
 PyJWT==2.10.1
 PyNaCl==1.5.0
+pynvml==11.5.3
 pyOpenSSL==24.3.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-json-logger==3.3.0
+python-multipart==0.0.20
 python-snappy==0.7.3
 pytorch-ranger==0.1.1
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.4.0
 querystring-parser==1.2.4
 questionary==2.1.0
 ray==2.44.1
@@ -169,6 +206,7 @@ referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
+rich-toolkit==0.14.3
 rpds-py==0.24.0
 rsa==4.9.1
 ruamel.yaml==0.18.10
@@ -177,49 +215,58 @@ s3transfer==0.12.0
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
-sentencepiece==0.1.97
+sentencepiece==0.2.0
 sentry-sdk==2.27.0
 setproctitle==1.3.5
 shellingham==1.5.4
+shtab==1.7.2
 six==1.17.0
 slack_sdk==3.35.0
+smart-open==7.1.0
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.40
 sqlparse==0.5.3
 starlette==0.46.2
-sympy==1.13.3
+sympy==1.13.1
 tabulate==0.9.0
 tenacity==8.5.0
 termcolor==3.0.1
 threadpoolctl==3.6.0
 tiktoken==0.9.0
-tokenizers==0.19.1
-torch==2.3.0
+tokenizers==0.20.3
+torch==2.5.1
 torch-optimizer==0.3.0
+torchaudio==2.5.1
 torchmetrics==1.3.2
-torchvision==0.18.0
+torchvision==0.20.1
 tqdm==4.67.1
-transformers==4.40.2
-triton==2.3.0
+transformers==4.45.2
+triton==3.1.0
+trl==0.9.2
+typeguard==4.4.2
 typer==0.15.2
 types-python-dateutil==2.9.0.20241206
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tyro==0.9.19
 tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
 uvloop==0.21.0
 validators==0.34.0
-vllm==0.5.0.post1
+virtualenv==20.30.0
+vllm==0.7.0
 vllm-flash-attn==2.5.9
 wandb==0.16.6
 watchfiles==1.0.5
 wcwidth==0.2.13
 websockets==11.0.3
 Werkzeug==3.1.3
-xformers==0.0.26.post1
+wrapt==1.17.2
+xformers==0.0.28.post3
+xgrammar==0.1.16
 xxhash==3.5.0
 yarl==1.20.0
 zipp==3.21.0
